--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="col-11 row">
                         <div class="col-5"></div>
                         <div class="col-7">
-                            <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspfont&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</button>
+                            <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspvalider&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</button>
                         </div>
                     </div>
                     <div class="col-3"></div>
