--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple website</title>
+    <title>Es-tu un vrai Hylien ?</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
@@ -15,7 +15,7 @@
             <div class="col-5">
             </div>
             <div class="col-6">
-                <h1>Simple website</h1>
+                <h1>Es-tu un vrai Hylien ?</h1>
             </div>
             <div class="col-1">
                 <button class="btn">Dark</button>
@@ -26,7 +26,7 @@
                 <div class="col-5">
                 </div>
                 <div class="col-6">
-                    <p>Simple website with a dark mode button</p>
+                    <p></p>
                 </div>
                 <div class="col-1">
                 </div>
